<resources>
    <string name="app_name">SurveyWithoutCompose</string>
    <string name="post_method">Continue</string>
    <string name="get_method">GET Method</string>
    <string name="slogan">Music Sharing is Caering</string>
    <string name="signdesc">Sign In or Create an account</string>
    <string name="email">Email</string>
    <string name="or">Or</string>
    <string name="guest">Sign In As Guest</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_log_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forget_password">Forget Password</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>